rewrite to https, fix for weird bug on small screens i think, added titles and descriptions to every page, SEO targeting dublin keyword

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,9 @@
+body, html {
+    box-sizing: border-box;
+    min-width: 100%;
+    margin: 0;
+}
+
 .form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control {
     background-color: #fff !important;
     opacity: 1;
@@ -179,4 +185,9 @@
 }
 .carousel-indicators > li {
     background-color: black;
+}
+@media(max-width:768px) {
+    .row.flex {
+        display: inherit;
+    }
 }
